--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <title>Todo App</title>
   <link
       href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
-      rel="stylesheet"
-      type="text/css">
+      rel="stylesheet">
   <link
       rel="stylesheet"
       href="style.css"
-      type="text/css"
       media="screen"
       charset="utf-8">
 </head>
@@ -75,7 +73,6 @@
     </ul>
   </div>
   <script
-      type="text/javascript"
       src="app.js">
   </script>
 </body>
