--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <div class="header">
     <img src="./eisenhower-matrix.jpg">
     <a
-        class="more_inf"
+        class="more-inf"
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details ?
     </a>
