--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
       media="screen"
       charset="utf-8">
 </head>
-<body>
+<body class="body">
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img
+        src="./eisenhower-matrix.jpg"
+        class="img"
+    >
     <a
         class="more-inf"
         href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -22,52 +25,66 @@
   </div>
   <div class="centered-main-page-element">
     <p id="top-section-for-adding-element-to-list">
-      <label for="new-task">Add Item</label>
+      <label class="label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input
             id="new-task"
-            class="task"
+            class="input task"
             type="text">
-        <button>Add</button>
+        <button class="button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
+    <h3 class="h3">Todo</h3>
+    <ul id="incomplete-tasks" class="ul">
+      <li class="li">
+        <input
+            type="checkbox"
+            class="input"
+        >
+        <label class="label task">Pay Bills</label>
         <input
             type="text"
-            class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+            class="input task">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
+          <img
+              src="./remove.svg"
+              class="img"
+          >
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
+      <li class="li edit-mode">
+        <input
+            type="checkbox"
+            class="input">
+        <label class="label task">Go Shopping</label>
         <input
             type="text"
             value="Go Shopping"
-            class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
+            class="input task">
+        <button class="button edit">Save</button>
+        <button class="button delete">
+          <img
+              src="./remove.svg"
+              class="img"
+          >
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
+    <h3 class="h3">Completed</h3>
+    <ul id="completed-tasks" class="ul">
+      <li class="li">
+        <input type="checkbox" checked class="input">
+        <label class="label task">See the Doctor</label>
         <input
             type="text"
-            class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
+            class="input task">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
+          <img
+              src="./remove.svg"
+              class="img"
+          >
         </button>
       </li>
     </ul>
