--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         Want more details ?
     </a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+  <div class="main-container">
+    <p id="main-container-top-section">
       <label class="label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input
