refactor: meaningful identifier and class names according to rule 3.2 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="main-container">
     <p id="main-container-top-section">
       <label class="label" for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+      <div class="add-task">
         <input
             id="new-task"
             class="input task"
