refactor: semantics according to rule 1.1 html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       charset="utf-8">
 </head>
 <body class="body">
-  <div class="header">
+  <header class="header">
     <img
         src="./eisenhower-matrix.jpg"
         class="img"
@@ -22,18 +22,18 @@
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details ?
     </a>
-  </div>
-  <div class="main-container">
-    <p id="main-container-top-section">
-      <label class="label" for="new-task">Add Item</label>
-      <div class="add-task">
+  </header>
+  <main class="main-container">
+    <section id="main-container-top-section">
+      <h1 class="label" for="new-task">Add Item</h1>
+      <span class="add-task">
         <input
             id="new-task"
             class="input task"
             type="text">
         <button class="button">Add</button>
-      </div>
-    </p>
+      </span>
+    </section>
     <h3 class="h3">Todo</h3>
     <ul id="incomplete-tasks" class="ul">
       <li class="li">
@@ -88,7 +88,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script
       src="app.js">
   </script>
