--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <img
         src="./eisenhower-matrix.jpg"
         class="img"
+        alt="image"
     >
     <a
         class="more-inf"
@@ -50,6 +51,7 @@
           <img
               src="./remove.svg"
               class="img"
+              alt="image"
           >
         </button>
       </li>
@@ -67,6 +69,7 @@
           <img
               src="./remove.svg"
               class="img"
+              alt="image"
           >
         </button>
       </li>
@@ -84,6 +87,7 @@
           <img
               src="./remove.svg"
               class="img"
+              alt="image"
           >
         </button>
       </li>
