--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
         alt="image"
     >
     <a
-        class="more-inf"
+        class="more__inf"
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details ?
     </a>
   </header>
-  <main class="main-container">
-    <section id="main-container-top-section">
-      <h1 class="label" for="new-task">Add Item</h1>
-      <span class="add-task">
+  <main class="main__container">
+    <section id="main__container_top-section">
+      <h1 class="label" for="new__task">Add Item</h1>
+      <span class="add__task">
         <input
-            id="new-task"
+            id="new__task"
             class="input task"
             type="text">
         <button class="button">Add</button>
       </span>
     </section>
     <h3 class="h3">Todo</h3>
-    <ul id="incomplete-tasks" class="ul">
+    <ul id="incomplete__tasks" class="ul">
       <li class="li">
         <input
             type="checkbox"
@@ -55,7 +55,7 @@
           >
         </button>
       </li>
-      <li class="li edit-mode">
+      <li class="li edit__mode">
         <input
             type="checkbox"
             class="input">
@@ -75,7 +75,7 @@
       </li>
     </ul>
     <h3 class="h3">Completed</h3>
-    <ul id="completed-tasks" class="ul">
+    <ul id="completed__tasks" class="ul">
       <li class="li">
         <input type="checkbox" checked class="input">
         <label class="label task">See the Doctor</label>
